<resources>
    <string name="app_name">OnlyMovie</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="logout">LOGOUT</string>
    <string name="find">Find At OnlyMovie</string>
    <string name="location">JAKARTA</string>
    <string name="home">Home</string>
    <string name="tickets">Tickets</string>
    <string name="movies">Movies</string>
</resources>