<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_weight="0.85"
            android:paddingHorizontal="10dp"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:background="@drawable/rounded"
            >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/search"
                android:layout_marginEnd="10dp"
                />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:hint="@string/find"
                android:layout_marginStart="10dp"
                android:background="@null"/>

        </LinearLayout>

        <ImageView
            android:layout_width="16dp"
            android:layout_height="28dp"
            android:src="@drawable/profile"
            android:layout_weight="0.15"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/location_section"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@color/light_gray"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingHorizontal="20dp"
        android:layout_below="@id/search_bar">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/location"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:layout_marginStart="18dp"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_details"
        android:text="Hello World!"
        android:layout_marginTop="200dp"
        android:layout_marginStart="163dp"
        android:layout_below="@id/location_section"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_marginStart="150dp"
        android:id="@+id/logout"
        android:layout_below="@id/user_details"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:background="@color/light_gray"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingHorizontal="20dp"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            >

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/home"
                android:layout_marginBottom="3dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="32dp"
                android:src="@drawable/movie"
                android:layout_marginBottom="3dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movies"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            >

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ticket"
                android:layout_marginBottom="3dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tickets"
                />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>